                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 21-12-2004 updated: Polish language file (Thnx to napek)
  - 21-12-2004 updated: Dutch language file (Thnx to joepmeloenx)
  - 21-12-2004 updated: Spanish language file (Thnx to elotrolado)
  - 21-12-2004 updated: Norwegian language file (Thnx to vnmartinsen)
  - 21-12-2004 fixed: thumbnailcache broken
  - 21-12-2004 fixed: music scanning and reading from database broken (database has to be rescanned)
  - 21-12-2004 fixed: incorrect imdb plot due to imdb url changes.
  - 21-12-2004 fixed: imdb thumb not always saved due to imdb url changes.
  - 21-12-2004 fixed: Button Scroller Mouse bugs
  - 20-12-2004 fixed: Video Database bug introduced in the last update(s).
  - 20-12-2004 fixed: IMDb changed their site + urls today. XBMC updated to suit.
  - 20-12-2004 fixed: serious bug in HTTP requests that result in  XBMC ignoring some responses without Content-Length header.
  - 20-12-2004 added: XLink Kai app specific fail-safe mode, delete kai-vectors.xml in XBMC dir to enable.
  - 20-12-2004 added: support for multiple subtitles, with language extension ie: filename.eng.sub (needs new mplayer.dll)
  - 20-12-2004 changed: new subtitle name interface for xbmc, will fallback to old style if missing (support old dlls)
  - 20-12-2004 added: full subtitle/audio translation database for both iso639-1 and iso639-2 language codes
  - 20-12-2004 added: alternate subtitle support. add a file named subtitle.[langext].[subext] in the alternate subtitle directory, and it will show up as an alternate subtitle for all movies.
  - 20-12-2004 fixed: Crash in Pictures context menu.
  - 20-12-2004 fixed: Text glitches in some IMDb lookups