@@ -965,6 +965,14 @@ void CGUIWindowVideoBase::AddItemToPlayList(const CFileItem* pItem)
 {
 	if (pItem->m_bIsFolder)
 	{
+		//	Check if we add a locked share
+		if ( pItem->m_bIsShareOrDrive ) 
+		{
+			CFileItem item=*pItem;
+			if ( !HaveBookmarkPermissions( &item, "music" ) )
+				return;
+		}
+
 		// recursive
 		if (pItem->GetLabel() == "..") return;
 		CStdString strDirectory=m_strDirectory;
